--- a/app/src/main/res/layout/layout_client_main.xml
+++ b/app/src/main/res/layout/layout_client_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- CoordinatorLayout 相当与一个FrameLayout -->
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.design.widget.AppBarLayout
@@ -10,11 +11,12 @@
         android:fitsSystemWindows="true"
         >
 
+        <!-- Toolbar必须有AppBarLayout包裹,Toolbar要滚动必须设置app:layout_scrollFlag属性 -->
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolBar_client_main"
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:layout_scrollFlags="scroll|snap"
             >
 
             <TextView
@@ -60,9 +62,19 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <!--
+    1. CoordinatorLayout需要包裹一个可滚动的控件，比如NestedScrollView, RecycleView,
+        ListView, ScrollView都不支持!
+    2. 必须设置属性
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        通知CoordinatorLayout该组件是可滑动的控件，
+        然后CoordinatorLayout在接受到滑动时会通知AppBarLayout 中可滑动的Toolbar可以滑出屏幕了。
+     -->
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        >
 
         <GridLayout
             android:layout_width="match_parent"
@@ -141,4 +153,4 @@
 
     </android.support.v4.widget.NestedScrollView>
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
