--- a/app/src/main/res/layout/layout_header.xml
+++ b/app/src/main/res/layout/layout_header.xml
@@ -1,42 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="200dp"
     >
 
     <ImageView
+        android:id="@+id/imageView_header_avatar"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:scaleType="centerCrop"
         android:src="@drawable/temp_headerbackground"
         />
 
-    <LinearLayout
-        android:layout_width="match_parent"
+
+    <TextView
+        android:id="@+id/textView_header_nickname"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center_horizontal"
+        android:text="nickname"
+        android:textSize="20px"
+        android:textColor="@android:color/white"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="10dp"
         android:layout_marginBottom="10dp"
-        >
-
-        <ImageView
-            android:id="@+id/imageView_header_avatar"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:layout_centerInParent="true"
-            android:src="@drawable/avatar_32"
-            />
-
-        <TextView
-            android:id="@+id/textView_header_nickname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="nickname"
-            android:textSize="32px"
-            android:textColor="@android:color/white"
-            />
-
-    </LinearLayout>
+        android:background="#60000000"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:ellipsize="start"
+        android:singleLine="true"
+        />
 
 </RelativeLayout>
