--- a/app/src/main/res/layout/layout_client_main.xml
+++ b/app/src/main/res/layout/layout_client_main.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- CoordinatorLayout 相当与一个FrameLayout -->
+<?xml version="1.0" encoding="utf-8"?><!-- CoordinatorLayout 相当与一个FrameLayout -->
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -8,56 +7,50 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        >
+        android:fitsSystemWindows="true">
 
         <!-- Toolbar必须有AppBarLayout包裹,Toolbar要滚动必须设置app:layout_scrollFlag属性 -->
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolBar_client_main"
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize"
-            app:layout_scrollFlags="scroll|snap"
-            >
+            app:layout_scrollFlags="scroll|snap">
 
             <TextView
                 android:id="@+id/textView_client_main_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/app_name"
-                android:textColor="@android:color/white"
-                />
+                android:textColor="@android:color/white" />
 
         </android.support.v7.widget.Toolbar>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/button_client_main_scanecode"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:text="@string/scancode"
-                android:textColor="@android:color/white"
+                android:drawablePadding="5dp"
                 android:drawableTop="@drawable/scancode_white_32"
                 android:padding="10dp"
-                android:drawablePadding="5dp"
-                />
+                android:text="@string/scancode"
+                android:textColor="@android:color/white" />
 
             <Button
                 android:id="@+id/button_client_main_payment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:text="@string/payment"
-                android:textColor="@android:color/white"
+                android:drawablePadding="5dp"
                 android:drawableTop="@drawable/pay_white_32"
                 android:padding="10dp"
-                android:drawablePadding="5dp"
-                />
+                android:text="@string/payment"
+                android:textColor="@android:color/white" />
         </LinearLayout>
 
     </android.support.design.widget.AppBarLayout>
@@ -71,85 +64,94 @@
         然后CoordinatorLayout在接受到滑动时会通知AppBarLayout 中可滑动的Toolbar可以滑出屏幕了。
      -->
     <android.support.v4.widget.NestedScrollView
+        android:id="@+id/nestedScrollView_client_main_wrapper"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        >
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <GridLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="20dp"
-            android:columnCount="3"
-            android:rowCount="2"
-            >
+            android:orientation="vertical">
 
-            <Button
-                android:id="@+id/button_client_main_mydeal"
-                android:layout_width="wrap_content"
+            <GridLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:text="@string/mydeal"
-                android:drawableTop="@drawable/deal_32"
-                android:drawablePadding="5dp"
-                android:padding="10dp"
-                android:layout_column="0"
-                android:layout_row="0"
-                />
+                android:columnCount="3"
+                android:paddingTop="20dp"
+                android:rowCount="2">
 
-            <Button
-                android:id="@+id/button_client_main_mydiscount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:text="@string/mydiscount"
-                android:drawableTop="@drawable/discount_32"
-                android:drawablePadding="5dp"
-                android:padding="10dp"
-                android:layout_column="1"
-                android:layout_row="0"
-                />
+                <Button
+                    android:id="@+id/button_client_main_mydeal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_column="0"
+                    android:layout_row="0"
+                    android:background="@android:color/transparent"
+                    android:drawablePadding="5dp"
+                    android:drawableTop="@drawable/deal_32"
+                    android:padding="10dp"
+                    android:text="@string/mydeal" />
 
-            <Button
-                android:id="@+id/button_client_main_pointstore"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:text="@string/pointstore"
-                android:drawableTop="@drawable/store_32"
-                android:drawablePadding="5dp"
-                android:padding="10dp"
-                android:layout_column="2"
-                android:layout_row="0"
-                />
+                <Button
+                    android:id="@+id/button_client_main_mydiscount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"
+                    android:layout_row="0"
+                    android:background="@android:color/transparent"
+                    android:drawablePadding="5dp"
+                    android:drawableTop="@drawable/discount_32"
+                    android:padding="10dp"
+                    android:text="@string/mydiscount" />
 
-            <Button
-                android:id="@+id/button_client_main_mypoint"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:text="@string/mypoint"
-                android:drawableTop="@drawable/point_32"
-                android:drawablePadding="5dp"
-                android:padding="10dp"
-                android:layout_column="0"
-                android:layout_row="1"
-                />
+                <Button
+                    android:id="@+id/button_client_main_pointstore"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_column="2"
+                    android:layout_row="0"
+                    android:background="@android:color/transparent"
+                    android:drawablePadding="5dp"
+                    android:drawableTop="@drawable/store_32"
+                    android:padding="10dp"
+                    android:text="@string/pointstore" />
 
-            <Button
-                android:id="@+id/button_client_main_mybalance"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:text="@string/mybalance"
-                android:drawableTop="@drawable/balance_32"
-                android:drawablePadding="5dp"
-                android:padding="10dp"
-                android:layout_column="1"
-                android:layout_row="1"
-                />
+                <Button
+                    android:id="@+id/button_client_main_mypoint"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_column="0"
+                    android:layout_row="1"
+                    android:background="@android:color/transparent"
+                    android:drawablePadding="5dp"
+                    android:drawableTop="@drawable/point_32"
+                    android:padding="10dp"
+                    android:text="@string/mypoint" />
 
-        </GridLayout>
+                <Button
+                    android:id="@+id/button_client_main_mybalance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"
+                    android:layout_row="1"
+                    android:background="@android:color/transparent"
+                    android:drawablePadding="5dp"
+                    android:drawableTop="@drawable/balance_32"
+                    android:padding="10dp"
+                    android:text="@string/mybalance" />
+
+            </GridLayout>
+
+            <include layout="@layout/item_account_header" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerView_client_week_account"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            </android.support.v7.widget.RecyclerView>
+
+        </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
 
