--- a/app/src/main/res/layout/item_account_header.xml
+++ b/app/src/main/res/layout/item_account_header.xml
@@ -17,13 +17,13 @@
         android:layout_height="wrap_content"
         android:text="@string/week_account"
         android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         />
 
     <ImageView
         android:id="@+id/imageView_item_account_header_loading"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_marginStart="10dp"
         android:src="@drawable/refresh_16"
         android:background="@android:color/transparent"
         android:scaleType="fitXY"
