--- a/app/src/main/res/layout/layout_client_main.xml
+++ b/app/src/main/res/layout/layout_client_main.xml
@@ -141,6 +141,19 @@
                     android:padding="10dp"
                     android:text="@string/mybalance" />
 
+
+                <Button
+                    android:id="@+id/button_client_main_discountstore"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_column="2"
+                    android:layout_row="1"
+                    android:background="@android:color/transparent"
+                    android:drawablePadding="5dp"
+                    android:drawableTop="@drawable/discountstore_32"
+                    android:padding="10dp"
+                    android:text="@string/discountstore" />
+
             </GridLayout>
 
             <include layout="@layout/item_account_header" />
